--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@
             <li><a href="https://codeacademy.com"><b>CodeAcademy</b></a></li>
         </ol>
     </div>
+    <ol>
+        <li>Testing Myself</li>
+    </ol>
 </body>
 </html>
