--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <title>Mi Primera Pagina Web</title>
+    <title>Mi First Web</title>
 </head>
 <body>
     <h1 class="heading1">My First Ever Website! Come and check it out!</h1>
