--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <li>I want to share my knowledge with others</li>
         </ol>
         <h3>Why should you learn how to code?</h3>
+        <p>It is good</p>
     <section><iframe width="560" height="315" src="https://www.youtube.com/embed/C6WJiUNZf7U?si=LSLeACgMr9XHNNsD" 
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
