--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <ol>
         <li>Testing Myself</li>
         <li>Learning More</li>
+        <li>Learning More and More</li>
     </ol>
 </body>
 </html>
